--- a/testbranch.html
+++ b/testbranch.html
@@ -5,5 +5,7 @@
     </head>
     </body>
     <h2>Master Branch</h2>
-    This is master branch
+    This is master branch.
+    <h4>New Feature 1</h4>
+    This is new feature 1.
 </html>
