--- a/testbranch.html
+++ b/testbranch.html
@@ -6,4 +6,6 @@
     </body>
     <h2>Master Branch</h2>
     This is master branch
-</html>
+    <h4>Feature 2</h4>
+    This is second feature.
+-</html>
